Добавил логику работы с Item